And more cleanup
Change-Id: I49cf4cba01452b291655dfccdc134180270c1ff3